--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,10 @@
         <div class="container col-8 px-0 bg-result">
             <div class="bg-info text-center bg-header py-2">
                 <h1>Command Line System</h1>
-                <h6>~ valid command names ~</h6>
-                <h6>[touch, mkdir, ls, cd, pwd, print, setContent, rm, move, copy]</h6>
-                <h6>Type "help" to see each format in details</h6>
+                <h5>~ valid command names ~</h5>
+                <h5>restaurans [address], cct currency, </h5>
+                <h5>cct convert [destinationLocale] [sourceDenomination] [sourceAmount]</h5>
+                <h5>Type "help" to see each format in details</h5>
             </div>
     
             <div id="shell" class="container vh-60 bg-dark p-3 text-white">
@@ -54,15 +55,18 @@
 
             const data = await response.json();
             
+            const shellElement = document.getElementById('shell');
             if (data.error) {
-                console.error('Error:', data.error);
+                shellElement.innerHTML += "> " + data.input + "<br><span style='color: red'>Error</span>: " + data.error + "<br>";
             } else {
-                const shellElement = document.getElementById('shell');
-                shellElement.innerHTML += data.result;
+                shellElement.innerHTML += "> " + data.input + "<br>" + data.result + "<br>";
             }
 
             // フォームの入力をリセットする
             inputElement.value = "";
+
+            // 出力画面を常に下にスクロールさせる
+            shellElement.scrollTop = shellElement.scrollHeight;
         });
     </script>
 </body>
